# bazel-example

./: .gitignore  BUILD.bazel  WORKSPACE.bazel  bazel-bazel-example  bazel-bin  bazel-out  bazel-testlogs  package.json  pnpm-lock.yaml
.github/workflows/: main.yml
projects/calculator/: BUILD.bazel  calculator_test.py
projects/go_hello_world/: BUILD.bazel  hello_world.go  hello_world_test.go
projects/go_web/: main.go
projects/my-python-app/: BUILD.bazel
projects/node_calculator/: BUILD.bazel  calculator.js  calculator.spec.js
projects/node_web/: BUILD.bazel  index.js
projects/projectA/: BUILD.bazel
projects/python_web/: BUILD.bazel  python_web.py
