load("@aspect_rules_js//js:defs.bzl", "js_binary")

js_binary(
    name = "node_web",
    # Reference the location where the acorn npm module was linked in the root Bazel package
    data = [
        "//:node_modules/express",
        "//projects/node_calculator:node_calculator"
        ],
    entry_point = "index.js",
)